--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# Compiler files
+cache/
+out/
 
-# Other files and folders
-.settings/
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+# Docs
+docs/
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Dotenv file
+.env
