--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,24 @@
-# Compiler files
-cache/
-out/
-
-# Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
-
-# Docs
-docs/
-
-# Dotenv file
+*/node_modules
+*node_modules
 .env
+coverage
+coverage.json
+typechain
+config.json
+contract.addresses
+deployedAddresses
+
+#Hardhat files
+cache
+artifacts
+*.lock
+#Foundry files
+out
+
+*.DS_Store
+
+broadcast
+
+# Deployment tools
+/data
 .idea
