--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,23 @@
 [profile.default]
-src = "src"
-out = "out"
-libs = ["lib"]
+src = 'src'
+out = 'out'
+libs = ['lib']
+fs_permissions = [{ access = "read-write", path = "./"}]
+remappings = [
+    'forge-std/=lib/forge-std/src/',
+    '@openzeppelin/=lib/openzeppelin-contracts/',
+    '@openzeppelin-upgrades/=lib/openzeppelin-contracts-upgradeable/'
+]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+gas_reports = ["*"]
+
+# A list of ignored solc error codes
+
+# Enables or disables the optimizer
+optimizer = true
+# The number of optimizer runs
+optimizer_runs = 200
+# Whether or not to use the Yul intermediate representation compilation pipeline
+via_ir = false
+# Override the Solidity version (this overrides `auto_detect_solc`)
+solc_version = '0.8.20'
