--- a/foundry.toml
+++ b/foundry.toml
@@ -20,3 +20,8 @@ optimizer_runs = 200
 # Whether or not to use the Yul intermediate representation compilation pipeline
 via_ir = false
 # Override the Solidity version (this overrides `auto_detect_solc`)
+
+[rpc_endpoints]
+goerli = "${GOERLI_RPC_URL}"
+local = "http://127.0.0.1:8545"
+mumbai = "${MUMBAI_RPC_URL}"
