--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,8 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+build_info = true
+extra_output = ["storageLayout"]
 fs_permissions = [{ access = "read-write", path = "./"}]
 remappings = [
     'forge-std/=lib/forge-std/src/',
