--- a/foundry.toml
+++ b/foundry.toml
@@ -22,8 +22,4 @@ optimizer_runs = 200
 # Whether or not to use the Yul intermediate representation compilation pipeline
 via_ir = true
 # Override the Solidity version (this overrides `auto_detect_solc`)
-
-[rpc_endpoints]
-goerli = "${GOERLI_RPC_URL}"
-local = "http://127.0.0.1:8545"
-mumbai = "${MUMBAI_RPC_URL}"
+evm_version = "cancun"
