--- a/foundry.toml
+++ b/foundry.toml
@@ -23,3 +23,7 @@ optimizer_runs = 200
 via_ir = true
 # Override the Solidity version (this overrides `auto_detect_solc`)
 evm_version = "cancun"
+solc_version = "0.8.26"
+
+[etherscan]
+polygon = { key = "${API_KEY}" }
