--- a/foundry.toml
+++ b/foundry.toml
@@ -28,11 +28,11 @@ evm_version = "cancun"
 solc_version = "0.8.26"
 
 [etherscan]
-polygon = { key = "${API_KEY}" }
-holesky = { key = "${HOLESKY_ETHERSCAN_API_KEY}" }  # 需注册 Holesky 专用 API 密钥
+polygon = { key = "${POLYGON_API_KEY}", chain = 137, url = "https://api.polygonscan.com/api"}
 sepolia = { key = "${ETHERSCAN_API_KEY}" }
 
 [rpc_endpoints]
 holesky = "${HOLESKY_RPC_URL}"  
 sepolia = "${SEPOLIA_RPC_URL}"
 local = "${LOCAL_RPC_URL}"  
+polygon = "${POLYGON_RPC_URL}"  
